--- a/css/pc.css
+++ b/css/pc.css
@@ -194,6 +194,10 @@ img {
   display: none;
 }
 
+.work-list a{
+    color: #5561b1;
+}
+
 .works-item {
   width: 300px;
   background-color: #fbfdff;
@@ -209,7 +213,6 @@ img {
 }
 
 .works-name {
-  color: #5561b1;
   font-size: 2rem;
   font-weight: bold;
   margin-top: 5%;
@@ -217,7 +220,6 @@ img {
 }
 
 .works-lead {
-  color: #5561b1;
   font-size: 1.4rem;
   margin-bottom: 5%;
   text-align: left;
