--- a/css/sp.css
+++ b/css/sp.css
@@ -89,10 +89,10 @@ img {
   }
 
   .btn {
-    width: 40%;
+    width: 50%;
     margin-top: 4%;
     margin-left: auto;
-    margin-right: 3%;
+    padding-right: 5%;
     filter: drop-shadow(5px 5px 0px #8196f3);
     transition-duration: 0.2s;
   }
@@ -268,7 +268,7 @@ img {
     background-image: url(../img/dot.png);
     background-size: cover;
     background-repeat: repeat-x;
-    margin-bottom: -0.5%;
+    margin-bottom: -1%;
     content: "";
     display: inline-block;
   }
