--- a/css/sp.css
+++ b/css/sp.css
@@ -89,10 +89,10 @@ img {
   }
 
   .btn {
-    width: 40%;
+    width: 30%;
     margin-top: 4%;
     margin-left: auto;
-    padding-right: 5%;
+    padding-right: 3%;
     filter: drop-shadow(5px 5px 0px #8196f3);
     transition-duration: 0.2s;
   }
@@ -150,6 +150,7 @@ img {
 
   .about-contents {
     width: 80%;
+    margin-top:2%;
     text-align: left;
   }
 
