--- a/css/sp.css
+++ b/css/sp.css
@@ -20,7 +20,7 @@ img {
 @media only screen and (max-width: 779px) {
   body {
     height: auto;
-    width: auto;
+    width: 100%;
     font-family: "Zen Kaku Gothic New", sans-serif;
     font-size: 2.4rem;
     color: #5561b1;
